fix: #1235: Fixed details page content overflowing (#1277)

--- a/packages/apps/spaces/components/organization/organization-details/organization-details.module.scss
+++ b/packages/apps/spaces/components/organization/organization-details/organization-details.module.scss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   border-radius: 10px;
-  margin-bottom: var(--spacing-xxl);
   box-shadow: 2px 2px 4px -2px rgba(0, 0, 50, 0.23),
     6px 6px 20px rgba(0, 0, 50, 0.1),
     -8px -8px 16px 2px hsla(200, 0%, 100%, 0.278);
